[gd_scene load_steps=2 format=3 uid="uid://dd565hagwlab0"]

[ext_resource type="Script" uid="uid://dfptaw2bha07e" path="res://00_Game/Scripts/BattleHero.gd" id="1_jaiax"]

[node name="BattleHero" type="Control"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jaiax")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="ManaBar" type="ProgressBar" parent="."]
modulate = Color(0.736172, 0.5112171, 0.9845249, 1)
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0

[node name="ReadyLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "ULTI HAZIR!"

[node name="ClickButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
